# search-once

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: crates.io.yml  dependabot.yml  rust.yml
src/: main.rs
