[package]
name = "search-once"
version = "0.1.2"
authors = ["Takahiro Miyoshi <takahiro-miyoshi@sankichi.net>"]
edition = "2021"
description = "A tool to search multiple websites at once"
readme = "README.md"
homepage = "https://github.com/sankichi92/search-once"
repository = "https://github.com/sankichi92/search-once"
license = "MIT"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
confy = { version = "0.6.1", default-features = false, features = ["yaml_conf"] }
open = "5.3.2"
percent-encoding = "2.3.1"
serde = { version = "1.0.218", features = ["derive"] }
